tests/paczka1/fuzzy1/47016810.err
Error in line 3: wKfgU7i A176 57,0
Error in line 4: S392 A176 73,0
Error in line 13: JYdV8lpBt S764 24,5
Error in line 27: fhKrZMz S764 88,1
